refactor: using collection